<?xml version="1.0"?>
<package format="2">
  <name>image_filter</name>
  <version>0.0.0</version>
  <description>The image_filter package</description>
  <maintainer email="thijs@todo.todo">thijs</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>libopencv-dev</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>numpy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
